--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -8,7 +8,7 @@
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 -->
 </head>
-<body th:object="${book}">
+<body th:object="${page}">
 
     <div class="container">
         <h1>Books List</h1>
@@ -45,7 +45,7 @@
                 even/odd：奇偶判断
                 first/last
             -->
-            <tr th:each="book,iterStat:${books}" th:class="${iterStat.even}?'bg-success'">
+            <tr th:each="book,iterStat:${page.content}" th:class="${iterStat.even}?'bg-success'">
                 <td th:text="${iterStat.count}">#</td>
 <!--
                 <td><a href="#" th:text="${book.name}" th:href="@{/books/{id}(id=${book.id})}">Name</a> </td>
@@ -60,11 +60,18 @@
                     <span th:case="2"> Want to read</span>
                 </td>
                 <td>
-                    <a href="#" th:href="@{/books/{id}/input(id=${book.id})}">Update</a>
+                    <a href="#" th:href="@{/books/{id}/input(id=${book.id})}">Update</a>&nbsp;
+                    <a href="#" th:href="@{/books/{id}/delete(id=${book.id})}">Delete</a>
                 </td>
             </tr>
             </tbody>
         </table>
+        <nav>
+            <ul class="pager">
+                <li class="previous"><a href="#" th:href="@{'/books?page='+${page.number-1}}" th:unless="${page.first}">Previous Page</a></li>
+                <li class="next"><a href="#" th:href="@{/books(page=${page.number}+1)}" th:unless="${page.last}">Next Page</a></li>
+            </ul>
+        </nav>
     </div>
 
 <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
